--- a/movieapp/src/component/Movie.css
+++ b/movieapp/src/component/Movie.css
@@ -1,3 +1,10 @@
+.load {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .box {
   position: relative;
   border: 1px solid #777;
