--- a/movieapp/src/routes/Home.css
+++ b/movieapp/src/routes/Home.css
@@ -5,3 +5,10 @@
   color: #fff;
   padding: 1.5rem 3.5rem;
 }
+
+.load {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
