--- a/movieapp/src/component/Movie.css
+++ b/movieapp/src/component/Movie.css
@@ -11,6 +11,18 @@
   padding: 10px;
   background-color: #202020;
   border-radius: 8px;
+  opacity: 1;
+  transition: all 300ms ease-in-out;
+}
+
+.box:hover {
+  opacity: 0.7;
+}
+
+.op {
+  width: 100%;
+  height: 100%;
+  opacity: 1;
 }
 
 .box img {
