--- a/movieapp/src/routes/Home.css
+++ b/movieapp/src/routes/Home.css
@@ -1,4 +1,8 @@
 .wrapper {
+  width: 100vw;
+}
+
+.bodyWrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 16px;
@@ -6,9 +10,88 @@
   padding: 1.5rem 3.5rem;
 }
 
+nav {
+  width: 100%;
+  height: 50px;
+}
+
+.logo {
+  position: absolute;
+  top: 15px;
+  left: 55px;
+  font-weight: 900;
+  color: yellow;
+  text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
+}
+
 .load {
   position: fixed;
+  top: 57%;
+  left: 51%;
+  transform: translate(-50%, -50%);
+}
+
+.loder {
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  animation-name: load-spin;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+.loder::before,
+.loder::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  border: 20px solid transparent;
+  border-top-color: rgb(250, 66, 72);
+  border-left-color: rgb(93, 219, 186);
+  border-bottom-color: rgb(237, 230, 112);
+  border-right-color: rgb(100, 195, 242);
+}
+
+.loder::before {
+  filter: blur(2px);
+}
+
+.loder::after {
+  animation-name: loadspin-opacity;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes load-spin {
+  0% {
+    transform: rotate(0turn);
+  }
+
+  100% {
+    transform: rotate(5turn);
+  }
+}
+
+@keyframes loadspin-opacity {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  80% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
