--- a/movieapp/src/routes/Detail.css
+++ b/movieapp/src/routes/Detail.css
@@ -16,7 +16,7 @@ div {
   top: 50%;
   left: 50%;
   padding: 20px;
-  width: 80%;
+  width: 70%;
   height: 77%;
   transform: translate(-50%, -50%);
   border: 2px solid #777;
@@ -63,4 +63,10 @@ div {
   text-align: center;
   line-height: 50px;
   border-radius: 5px;
+  transition: all 200ms ease-in-out;
+}
+
+.back:hover {
+  color: #202020;
+  background-color: #777;
 }
