--- a/movieapp/src/routes/Home.css
+++ b/movieapp/src/routes/Home.css
@@ -1,13 +1,13 @@
 .wrapper {
-  width: 100vw;
+  width: 100%;
 }
 
 .bodyWrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 16px;
+  grid-gap: 1.2rem;
   color: #fff;
-  padding: 1.5rem 3.5rem;
+  padding: 1.5rem 6rem;
 }
 
 nav {
