--- a/movieapp/src/component/Textarea.css
+++ b/movieapp/src/component/Textarea.css
@@ -16,4 +16,9 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   line-height: 150%;
+  padding-right: 12px;
+}
+
+.swiper-scrollbar-drag {
+  background-color: #fff;
 }
