--- a/movieapp/src/routes/Home.css
+++ b/movieapp/src/routes/Home.css
@@ -95,3 +95,21 @@ nav {
     opacity: 1;
   }
 }
+
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 450px;
+  height: 90%;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
