--- a/movieapp/src/component/Movie.css
+++ b/movieapp/src/component/Movie.css
@@ -27,6 +27,7 @@
 
 .box img {
   width: 100%;
+  border-radius: 8px;
 }
 
 a {
@@ -92,4 +93,8 @@ li:hover {
   font-weight: 500;
   cursor: pointer;
   transform: scale(1.1);
+}
+
+h2 {
+  margin-top: 8px;
 }
