--- a/movieapp/src/routes/Home.css
+++ b/movieapp/src/routes/Home.css
@@ -2,13 +2,13 @@
   width: 100%;
 }
 
-.bodyWrapper {
+/* .bodyWrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1.2rem;
   color: #fff;
   padding: 1.5rem 6rem;
-}
+} */
 
 nav {
   width: 100%;
